setting up ssh on bht pc

--- a/geoopt-universal-manifold/tests.ipynb
+++ b/geoopt-universal-manifold/tests.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "af88104e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -48,7 +50,6 @@
     "gpu = False\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "\n",
     "def set_global_seed(seed: int):\n",
     "  random.seed(seed)\n",
     "  np.random.seed(seed)\n",
@@ -70,44 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c16d2b5c-e4a1-42c9-914d-36c08a8e5ea4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cuda')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "device"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "abffc64f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "H:\\Thesis\\Adaptive-Point-HGNN\\geoopt-universal-manifold\\geoopt\\optim\\radam.py:85: UserWarning: This overload of add_ is deprecated:\n",
-      "\tadd_(Number alpha, Tensor other)\n",
-      "Consider using one of the following signatures instead:\n",
-      "\tadd_(Tensor other, *, Number alpha = 1) (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\torch\\csrc\\utils\\python_arg_parser.cpp:1661.)\n",
-      "  grad.add_(weight_decay, point)\n",
-      "  5%|███▉                                                                            | 99/2000 [01:55<42:28,  1.34s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x   = random_pc_vector(2)\n",
     "y   = random_pc_vector(2)\n",
@@ -127,11 +94,11 @@
     "\n",
     "# PRODUCT GEOMETRY\n",
     "\n",
-    "screenshots = product.torus_embedding.show(device)\n",
+    "#screenshots = product.torus_embedding.show(device)\n",
     "\n",
     "# K-STEREOGRAPHIC MODEL\n",
     "\n",
-    "#stereographic.distance.show(x,device)"
+    "stereographic.distance.show(x,device)"
    ]
   },
   {
