bringing plot function up to speed

--- a/geoopt-universal-manifold/tests.ipynb
+++ b/geoopt-universal-manifold/tests.ipynb
@@ -41,6 +41,9 @@
     }
    ],
    "source": [
+    "import os\n",
+    "os.environ['PATH'] = r'H:\\Thesis\\gifsicle-1.95-win64;' + os.environ['PATH'] \n",
+    "\n",
     "import random\n",
     "import torch\n",
     "from docs.plots import * \n",
@@ -74,7 +77,15 @@
    "execution_count": null,
    "id": "abffc64f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 51%|█████▏    | 95/185 [02:18<02:17,  1.53s/it]"
+     ]
+    }
+   ],
    "source": [
     "x   = random_pc_vector(2)\n",
     "y   = random_pc_vector(2)\n",
@@ -95,79 +106,26 @@
     "\n",
     "# PRODUCT GEOMETRY\n",
     "\n",
-    "screenshots = product.torus_embedding.show(device)\n",
+    "#screenshots = product.torus_embedding.show(device)\n",
     "\n",
     "# K-STEREOGRAPHIC MODEL\n",
     "\n",
-    "stereographic.distance.show(x,device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df7c3f17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import imageio\n",
-    "imageio.mimsave(f'training.gif', screenshots, duration=1/24)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9fcc669",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Assuming bht_points is already defined\n",
-    "x_vals = [coord[0] for coord in bht_points.values()]\n",
-    "y_vals = [coord[1] for coord in bht_points.values()]\n",
-    "\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.scatter(x_vals, y_vals, c=COLORS.grey, s=10)\n",
-    "\n",
-    "\n",
-    "plt.gca().set_aspect(\"equal\")  # for square geometry\n",
-    "plt.gca().set_xticks([])\n",
-    "plt.gca().set_yticks([])\n",
-    "plt.grid(True)\n",
-    "plt.title(\"BHT Points\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eff54ba6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyopencl as cl\n",
-    "\n",
-    "platforms = cl.get_platforms()\n",
-    "for platform in platforms:\n",
-    "  print(f\"Platform: {platform.name}\")\n",
-    "  for device in platform.get_devices():\n",
-    "    print(f\"  Device: {device.name}\")\n",
-    "    print(f\"    Type: {cl.device_type.to_string(device.type)}\")\n",
-    "    print(f\"    Max compute units: {device.max_compute_units}\")\n",
-    "    print(f\"    Global memory: {device.global_mem_size / (1024 ** 3):.2f} GB\")\n",
-    "    print(f\"    Max clock freq: {device.max_clock_frequency} MHz\")\n",
-    "    print(f\"    Max allocable memory: {device.max_mem_alloc_size / (1024 ** 3):.2f} GB\")\n"
+    "#stereographic.distance.show(x,device)\n",
+    "stereographic.distance2plane.show(x,v1)\n",
+    "#poincare.distance2plane.show(x,v1,device)\n",
+    "#poincare.gyrovector_parallel_transport.show(x,y,device)\n",
+    "#poincare.mobius_add.show(x,y,device)\n",
+    "#poincare.mobius_matvec.show(M,x,device)\n",
+    "#poincare.mobius_sigmoid_apply.show(x,device)\n",
+    "#poincare.parallel_transport.show(x,y,v1,v2,device)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "gnn.test",
    "language": "python",
-   "name": "python3"
+   "name": "gnn.test"
   },
   "language_info": {
    "codemirror_mode": {
