--- a/geoopt-universal-manifold/tests.ipynb
+++ b/geoopt-universal-manifold/tests.ipynb
@@ -22,7 +22,20 @@
       "parallel_transport\n",
       "\n",
       "[product]\n",
-      "(torus_embedding)\n",
+      "(torus_embedding)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "multiple 'tvtk.toolkits' plugins found for toolkit 'qt': tvtk.pyface.ui.qt4.init, tvtk.pyface.ui.qt4.init\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "[stereographic]\n",
       "(distance)\n",
@@ -71,10 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "abffc64f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 185/185 [01:33<00:00,  1.99it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "x   = random_pc_vector(2)\n",
     "y   = random_pc_vector(2)\n",
@@ -95,7 +116,7 @@
     "\n",
     "# PRODUCT GEOMETRY\n",
     "\n",
-    "screenshots = product.torus_embedding.show(device)\n",
+    "#screenshots = product.torus_embedding.show(device)\n",
     "\n",
     "# K-STEREOGRAPHIC MODEL\n",
     "\n",
@@ -110,9 +131,7 @@
    "outputs": [],
    "source": [
     "import imageio\n",
-    "imageio.mimsave(f'training.gif', screenshots, duration=1/24)\n",
-    "\n",
-    "\n"
+    "imageio.mimsave(f'training.gif', screenshots, duration=1/24)"
    ]
   },
   {
