--- a/geoopt-universal-manifold/tests.ipynb
+++ b/geoopt-universal-manifold/tests.ipynb
@@ -12,43 +12,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[poincare]\n",
-      "(distance)\n",
-      "(distance2plane)\n",
-      "(gyrovector_parallel_transport)\n",
-      "(mobius_add)\n",
-      "(Mobius Matvec)\n",
-      "(mobius_sigmoid_apply)\n",
-      "parallel_transport\n",
-      "\n",
-      "[product]\n",
-      "(torus_embedding)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "multiple 'tvtk.toolkits' plugins found for toolkit 'qt': tvtk.pyface.ui.qt4.init, tvtk.pyface.ui.qt4.init\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
       "[stereographic]\n",
       "(distance)\n",
       "(distance2plane)\n",
-      "(euclidean_grid)\n",
-      "(geodesic_grid)\n",
-      "(midpoint)\n",
-      "(mobius_add)\n",
-      "(mobius_matvec)\n",
-      "(orthogonal_sigmoid_apply)\n",
-      "(orthogonal_projection)\n",
-      "(orthogonal_projection_pub)\n",
-      "parallel_transport\n",
       "\n"
      ]
     }
@@ -59,11 +25,14 @@
     "\n",
     "import random\n",
     "import torch\n",
-    "from docs.plots import * \n",
+    "from docs.plots import (\n",
+    "  #poincare,\n",
+    "  #product,\n",
+    "  stereographic\n",
+    ")\n",
     "import numpy as np\n",
     "from globals import COLORS\n",
     "\n",
-    "gpu = False\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "def set_global_seed(seed: int):\n",
@@ -87,29 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "df7c3f17",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  x: tensor([-0.2343,  0.9186], dtype=torch.float64),\\\n",
-      "  y: tensor([-0.2191,  0.2018], dtype=torch.float64),\\\n",
-      "  v1: tensor([0.0513, 0.1587], dtype=torch.float64),\\\n",
-      "  v2: tensor([0.1882, 0.0266], dtype=torch.float64),\\\n",
-      "  M: tensor([[-1.0000, -1.5000],\n",
-      "        [ 0.2000,  0.5000]], dtype=torch.float64)\n",
-      "  \n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 185/185 [01:29<00:00,  2.07it/s]\n"
+      "100%|██████████| 185/185 [03:31<00:00,  1.14s/it]\n"
      ]
     }
    ],
@@ -120,24 +75,24 @@
     "v2  = torch.rand(2).to(torch.float64)/5\n",
     "M   = torch.tensor([[-1, -1.5], [0.2, 0.5]]).to(torch.float64)\n",
     "\n",
-    "print(\n",
-    "  f\"\"\"\n",
-    "  x: {x},\\\\\n",
-    "  y: {y},\\\\\n",
-    "  v1: {v1},\\\\\n",
-    "  v2: {v2},\\\\\n",
-    "  M: {M}\n",
-    "  \"\"\"\n",
-    ")\n",
+    "# print(\n",
+    "#   f\"\"\"\n",
+    "#   x:  {x},\\\\\n",
+    "#   y:  {y},\\\\\n",
+    "#   v1: {v1},\\\\\n",
+    "#   v2: {v2},\\\\\n",
+    "#   M:  {M}\n",
+    "#   \"\"\"\n",
+    "# )\n",
     "\n",
     "# POINCARE\n",
-    "#poincare.distance.show(x,device)\n",
-    "#poincare.distance2plane.show(x,v1,device)\n",
-    "#poincare.gyrovector_parallel_transport.show(x,y,device)\n",
+    "#poincare.distance.show(x)\n",
+    "#poincare.distance2plane.show(x,v1)\n",
+    "#poincare.gyrovector_parallel_transport.show(x,y)\n",
     "#poincare.mobius_add.show(x,y,device)\n",
-    "#poincare.mobius_matvec.show(M,x,device)\n",
-    "#poincare.mobius_sigmoid_apply.show(x,device)\n",
-    "#poincare.parallel_transport.show(x,y,v1,v2,device)\n",
+    "#poincare.mobius_matvec.show(M,x)\n",
+    "#poincare.mobius_sigmoid.show(x)\n",
+    "#poincare.parallel_transport.show(x,y,v1,v2)\n",
     "\n",
     "# PRODUCT GEOMETRY\n",
     "\n",
@@ -146,14 +101,24 @@
     "# K-STEREOGRAPHIC MODEL\n",
     "\n",
     "#stereographic.distance.show(x)\n",
-    "#stereographic.distance2plane.show(x,v1)\n",
+    "stereographic.distance2plane.show(x,v1)\n",
     "#stereographic.geodesic_grid.show()\n",
     "#stereographic.gyrovector_parallel_transport.show(x,y,v1,v2)\n",
     "#stereographic.midpoint.show(x,y,5*v1,5*v2)\n",
-    "stereographic.mobius_add.show(x,y)\n",
+    "#stereographic.mobius_add.show(x,y)\n",
     "#poincare.mobius_matvec.show(M,x,device)\n",
     "#poincare.mobius_sigmoid_apply.show(x,device)\n",
     "#poincare.parallel_transport.show(x,y,v1,v2,device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5005a016",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.arange(0,5.5,0.5)"
    ]
   },
   {
@@ -208,7 +173,7 @@
   "kernelspec": {
    "display_name": "gnn.test",
    "language": "python",
-   "name": "python3"
+   "name": "gnn.test"
   },
   "language_info": {
    "codemirror_mode": {
