--- a/geoopt-universal-manifold/tests.ipynb
+++ b/geoopt-universal-manifold/tests.ipynb
@@ -13,8 +13,7 @@
      "output_type": "stream",
      "text": [
       "[stereographic]\n",
-      "(distance)\n",
-      "(distance2plane)\n",
+      "(möbius_sigmoid)\n",
       "\n"
      ]
     }
@@ -64,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 185/185 [03:31<00:00,  1.14s/it]\n"
+      "100%|██████████| 185/185 [00:55<00:00,  3.32it/s]\n"
      ]
     }
    ],
@@ -95,19 +94,17 @@
     "#poincare.parallel_transport.show(x,y,v1,v2)\n",
     "\n",
     "# PRODUCT GEOMETRY\n",
-    "\n",
     "#screenshots = product.torus_embedding.show(device)\n",
     "\n",
     "# K-STEREOGRAPHIC MODEL\n",
-    "\n",
     "#stereographic.distance.show(x)\n",
-    "stereographic.distance2plane.show(x,v1)\n",
-    "#stereographic.geodesic_grid.show()\n",
+    "#stereographic.distance2plane.show(x,v1)\n",
+    "# stereographic.geodesic_grid.show()\n",
     "#stereographic.gyrovector_parallel_transport.show(x,y,v1,v2)\n",
     "#stereographic.midpoint.show(x,y,5*v1,5*v2)\n",
     "#stereographic.mobius_add.show(x,y)\n",
-    "#poincare.mobius_matvec.show(M,x,device)\n",
-    "#poincare.mobius_sigmoid_apply.show(x,device)\n",
+    "#stereographic.mobius_matvec.show(M,x)\n",
+    "stereographic.mobius_sigmoid.show(x)\n",
     "#poincare.parallel_transport.show(x,y,v1,v2,device)"
    ]
   },
@@ -173,7 +170,7 @@
   "kernelspec": {
    "display_name": "gnn.test",
    "language": "python",
-   "name": "gnn.test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
