--- a/notebooks/sanity_checks.ipynb
+++ b/notebooks/sanity_checks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cb637efc",
    "metadata": {},
    "outputs": [],
@@ -13,23 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fcb3c6ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
-      "Loaded 2305 Pedestrian for augmentation\n",
-      "Loaded 5970 Car for augmentation\n",
-      "Loaded 654 Cyclist for augmentation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from models.box_encoders_decoders import *\n",
     "from data.kitti_dataset import KittiDataset\n",
@@ -39,28 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "eb0660b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cropping boxes and saving to c:\\Users\\prfej\\OneDrive\\Education\\BHT - Apllied Mathematics\\THESIS\\Adaptive-Point-HGNN\\data\\cropped_boxes\\cropped.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 7481/7481 [00:56<00:00, 131.56it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#test_encoder_decoder('classaware_all_class_box_canonical',kitti_data)\n",
-    "kitti_data.save_cropped_boxes()"
+    "# test_encoder_decoder('classaware_all_class_box_canonical',kitti_data)\n",
+    "kitti_data.vis_crop_aug_sampler()"
    ]
   }
  ],
