--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -16,6 +16,8 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import random\n",
+    "from matplotlib import pyplot as plt\n",
     "os.chdir('..')\n",
     "\n",
     "from data.kitti_dataset import KittiDataset"
@@ -79,12 +81,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "calib = kitti.get_calib(0)"
+    "# <center> GEO-OPT </center>"
    ]
   },
   {
@@ -93,7 +93,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib['cam_to_image']"
+    "from geoopt.manifolds import StereographicExact\n",
+    "from geoopt import ManifoldTensor, ManifoldParameter\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "manifold    = StereographicExact(k=-0.01,learnable=True)\n",
+    "velo_points = kitti.get_velo_points(idx)\n",
+    "velo_points = torch.from_numpy(velo_points.xyz).double()\n",
+    "velo_points = ManifoldTensor(velo_points, manifold=manifold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(velo_points)\n",
+    "velo_points.proj_()\n",
+    "print(velo_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points_eucl = torch.linspace(0,100,100)[::,torch.newaxis]*torch.tensor([1,1,1])\n",
+    "diffs_eucl  = points_eucl[1:] - points_eucl[:-1]\n",
+    "dist_eucl   = torch.linalg.norm(diffs_eucl, axis=1)\n",
+    "print(dist_eucl)\n",
+    "\n",
+    "points_stereo = ManifoldTensor(points_eucl,manifold=manifold)\n",
+    "points_stereo.proj_()\n",
+    "# diffs_stereo  = points_stereo[1:] - points_stereo[:-1]\n",
+    "# dist_stereo   = torch.linalg.norm(diffs_stereo, axis=1)\n",
+    "# print(dist_stereo)"
    ]
   }
  ],
