Graph layer generation complete. Dataset class defined. next step defining pooling and aggregation mechanisms

--- a/notebooks/sanity_checks.ipynb
+++ b/notebooks/sanity_checks.ipynb
@@ -18,7 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models.box_encoders_decoders import *\n",
     "from data.kitti_dataset import KittiDataset\n",
     "\n",
     "kitti_data = KittiDataset()"
@@ -33,6 +32,36 @@
    "source": [
     "# test_encoder_decoder('classaware_all_class_box_canonical',kitti_data)\n",
     "kitti_data.vis_crop_aug_sampler()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53aee7ec",
+   "metadata": {},
+   "source": [
+    "<center> BBOX ENCODING </center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b697fcae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models.box_encoders_decoders import (\n",
+    "  classaware_all_class_box_encoding,\n",
+    "  classaware_all_class_box_decoding,\n",
+    "  classaware_all_class_box_canonical_encoding,\n",
+    "  classaware_all_class_box_canonical_decoding\n",
+    ")\n",
+    "\n",
+    "kitti = KittiDataset() # initialize data object\n",
+    "\n",
+    "encoder_fn = classaware_all_class_box_encoding\n",
+    "decoder_fn = classaware_all_class_box_decoding\n",
+    "\n",
+    "test_decoder(encoder_fn, decoder_fn)"
    ]
   }
  ],
